# llmao

./: .gitignore  Cargo.toml  README.md  providers.json  pyproject.toml
examples/: README.md  basic_usage.py  config_file.py  custom_provider.py  multi_provider.py  programmatic_config.py  simple_chat.py
python/llmao/: __init__.py  __init__.pyi
python/llmao_py/: __init__.py  __init__.pyi
src/: error.rs  lib.rs
src/api/: completion.rs  mod.rs  streaming.rs
src/client/: http.rs  mod.rs  rate_limiter.rs
src/config/: loader.rs  mod.rs  provider.rs
src/router/: key_pool.rs  mod.rs  strategy.rs
