[package]
name = "llmao"
version = "0.1.0"
edition = "2021"
description = "Lightweight LLM API Orchestrator - A fast, multi-provider LLM client with rate limiting and key rotation"
license = "MIT"
repository = "https://github.com/svviitzerland/llmao"
keywords = ["llm", "openai", "api", "python", "pyo3"]
categories = ["api-bindings", "asynchronous"]

[lib]
name = "llmao"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Retry and backoff
backoff = { version = "0.4", features = ["tokio"] }

# Synchronization
parking_lot = "0.12"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
async-stream = "0.3"
pin-project-lite = "0.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Directories for config
dirs = "6"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
